@@ -8,8 +8,8 @@ import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 /**
- * Класс для запуска BAT-файла на удаленном Windows-компьютере через WMI (wmic.exe).
- * Подходит для Windows Server 2003, где нет WinRM.
+ * пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ BAT-пїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ Windows-пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ WMI (wmic.exe).
+ * пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ Windows Server 2003, пїЅпїЅпїЅ пїЅпїЅпїЅ WinRM.
  */
 public class WmiBatRunner {
 
@@ -26,32 +26,27 @@ public class WmiBatRunner {
     }
 
     /**
-     * Запускает BAT-файл на удаленном компьютере.
+     * пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ BAT-пїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ.
      *
-     * @param remoteBatPath Полный путь к .bat на удаленном ПК (например, "C:\\temp\\run_me.bat")
-     * @return Вывод wmic (ProcessId, ReturnValue)
+     * @param remoteBatPath пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅ .bat пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ (пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ, "C:\\temp\\run_me.bat")
+     * @return пїЅпїЅпїЅпїЅпїЅ wmic (ProcessId, ReturnValue)
      */
     public String runBat(String remoteBatPath) throws IOException, InterruptedException {
-        // Формируем команду для wmic:
-        // process call create "cmd.exe /c \"путь_к_bat\""
-        String wmiCommand = "cmd.exe /c \"" + remoteBatPath + "\"";
-
         List<String> cmdList = new ArrayList<>();
         cmdList.add("wmic");
         cmdList.add("/node:" + host);
-        cmdList.add("/user:" + username);
+        cmdList.add("/user:\"" + username + "\"");
         cmdList.add("/password:" + password);
         cmdList.add("process");
         cmdList.add("call");
         cmdList.add("create");
-        cmdList.add(wmiCommand);
+        // Р‘РµР· РєР°РІС‹С‡РµРє РІРѕРєСЂСѓРі РїСѓС‚Рё Рє bat, РєР°РІС‹С‡РєРё С‚РѕР»СЊРєРѕ РІРѕРєСЂСѓРі СЂР°Р±РѕС‡РµР№ РґРёСЂРµРєС‚РѕСЂРёРё
+        cmdList.add(remoteBatPath + ",\"C:\\ae\"");
 
-        ProcessBuilder pb = new ProcessBuilder(cmdList);
-        pb.redirectErrorStream(true);
+        String command = "wmic /node:" + host + " /user:\"" + username + "\" /password:" + password 
+                + " process call create \"" + remoteBatPath + "\"";
+        Process process = Runtime.getRuntime().exec(command);
 
-        Process process = pb.start();
-
-        // Читаем вывод wmic (кодировка Cp866 для русского текста)
         StringBuilder output = new StringBuilder();
         try (BufferedReader reader = new BufferedReader(
                 new InputStreamReader(process.getInputStream(), "Cp866"))) {
@@ -64,7 +59,7 @@ public class WmiBatRunner {
         boolean finished = process.waitFor(timeoutSeconds, TimeUnit.SECONDS);
         if (!finished) {
             process.destroyForcibly();
-            throw new IOException("Превышен таймаут запуска BAT (" + timeoutSeconds + " сек)");
+            throw new IOException("РџСЂРµРІС‹С€РµРЅ С‚Р°Р№РјР°СѓС‚ Р·Р°РїСѓСЃРєР° BAT (" + timeoutSeconds + " СЃРµРє)");
         }
 
         return output.toString();
